--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -15,6 +15,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-position: fixed;
+    background-repeat: no-repeat;
+    background-size:cover;
     color: white;
     z-index: 2;
     transition: 0.6s;
