--- a/CSS/Explore.css
+++ b/CSS/Explore.css
@@ -9,22 +9,25 @@
 
 
 .container{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    margin-left: 25vw;
 }
 
 .item{
     text-align: center;
     border: 3px solid white;
-    border-radius: 10px;
     padding: 10px;
     /* margin: auto; */
-    transition: 0.01s ease-in-out;
+    transition: 0.1s ease-in-out;
     cursor: pointer;
     font-weight: 400;
 }
 .item:hover{
     color: black;
     background-color: white;
+}
+.item:active{
     transform: scale(0.9);
 }
