--- a/CSS/Styles.css
+++ b/CSS/Styles.css
@@ -21,22 +21,23 @@
     color: white;
     z-index: 2;
     transition: 0.6s;
-    animation: animate 32s ease-in-out infinite;
+    animation: animate 64s ease-in-out infinite;
+    
 }
 
 @keyframes animate{
     0%,100%{
         background-image: url(Image1.jpeg);
     }
-    33%{
+    25%{
         background-image: url(image2.jpeg);
     }
-    66%{
+    50%{
         background-image: url(Image3.jpeg) ;
     }
-    /* 75%{
-        background-image: url(Image3.jpeg);
-    } */
+    75%{
+        background-image: url(Image4.jpg);
+    }
 }
 .showcase.active{
     right: 300px;
@@ -144,7 +145,7 @@
     transition: 0.5s;
 }
 .social li a:hover{
-    transform: scale(0.9) translateY(-10px);
+    transform: translateY(-5px);
 }
 .menu{
     position:absolute;
